--- a/MSAL.ECommerce.Api/appsettings.json
+++ b/MSAL.ECommerce.Api/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com",
+    "Issuer": "https://sts.windows.net",
+    "Domain": "lacisorg.onmicrosoft.com",
+    "TenantId": "a6c5d2d9-0864-4a8e-a168-edb2f8c5ca81",
+    "ClientId": "97fdb2f0-4d52-44a6-91df-a1b6bd06b963",
+    "ClientSecret": ".bMsx8atIx@UiiVZWX6r4gRqG6/]2bq_",
+    "Audience": "https://lacisorg.onmicrosoft.com/EcommerceApi"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
