--- a/MSAL.ECommerce.ClientDesk/appsettings.json
+++ b/MSAL.ECommerce.ClientDesk/appsettings.json
@@ -1,8 +1,14 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/{0}",
+    "Domain": "lacisorg.onmicrosoft.com",
+    "TenantId": "a6c5d2d9-0864-4a8e-a168-edb2f8c5ca81",
+    "ClientId": "7b3f5d20-177a-4628-b90b-6c992c39aa01",
+    "ClientSecret": "Jf/Zo9Bi_5AU/Le4?cxWJp6R5z3Ui5av",
+    "RedirectUri": "http://localhost"
+  },
   "AppSettings": {
     "ECommerceApiUrl": "https://localhost:44316/",
-    "ida:ClientId": "Value",
-    "IntegerSetting": 42,
-    "BooleanSetting": true
+    "MsGraphApiUrl": "https://graph.microsoft.com/v1.0/"
   }
 }
