--- a/MSAL.ECommerce.ClientWeb/MSAL.ECommerce.ClientWeb.csproj
+++ b/MSAL.ECommerce.ClientWeb/MSAL.ECommerce.ClientWeb.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MSAL.ECommerce.Shared\MSAL.ECommerce.Shared.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
