--- a/MSAL.ECommerce.ClientSpa/ng-msal-spa/package.json
+++ b/MSAL.ECommerce.ClientSpa/ng-msal-spa/package.json
@@ -24,6 +24,7 @@
     "@azure/msal-angular": "^1.0.0-beta.4",
     "hammerjs": "^2.0.8",
     "msal": "^1.2.1",
+    "pkce": "^1.0.0-beta2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
